add viewing features and frame interactively

--- a/interactive.ipynb
+++ b/interactive.ipynb
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edc2aaa8b7bb4559b6f33a7bea89d754",
+       "model_id": "876a9eabee4443008351efb77d9416f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8d1cf0679584a9e80f832f2404ac3c0",
+       "model_id": "e80272928dc24957aa8b143b832394f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,13 +185,19 @@
     "def one_feature(index=110):\n",
     "    plt.ylim([0, 1])\n",
     "    plt.plot(skel_df.loc[110: index, 'J0_3D_X'])\n",
+    "    plt.ylabel('J0_3D_X')\n",
+    "    plt.xlabel('FrameID')\n",
     "    plt.scatter(index, skel_df.loc[index, 'J0_3D_X'], color='red')\n",
     "    display(PIL.Image.fromarray(buffer_frames[index][:, :, ::-1]))\n",
     "    \n",
     "\n",
     "@interact(index=(110, 10000, 10))\n",
     "def two_feature(index=110):\n",
+    "    plt.ylim([0, 1])\n",
+    "    plt.xlim([0, 1])\n",
     "    plt.plot(skel_df.loc[102:index, 'J0_3D_X'], skel_df.loc[102: index, 'J11_3D_X'])\n",
+    "    plt.xlabel('J0_3D_X')\n",
+    "    plt.ylabel('J11_3D_X')\n",
     "    plt.scatter(skel_df.loc[index, 'J0_3D_X'], skel_df.loc[index, 'J11_3D_X'], color='red')\n",
     "    display(PIL.Image.fromarray(buffer_frames[index][:, :, ::-1]))"
    ]
