add bash scripts for Slurm cluster, refactor interactive script

--- a/interactive.ipynb
+++ b/interactive.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,21 @@
      "output_type": "stream",
      "text": [
       "JupyterLab v2.2.6\n",
-      "No installed extensions\n",
+      "Known labextensions:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "   app dir: C:\\Users\\nguye\\anaconda3\\envs\\sem-pysot-37\\share\\jupyter\\lab\n",
+      "        @pyviz/jupyterlab_pyviz v1.0.4 enabled  ok\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Known nbextensions:\n",
       "  config dir: C:\\Users\\nguye\\.jupyter\\nbconfig\n",
       "    notebook section\n",
@@ -51,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 2.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -122,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "876a9eabee4443008351efb77d9416f5",
+       "model_id": "436b726c503d4c68b478a55c2c3e80b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e80272928dc24957aa8b143b832394f0",
+       "model_id": "f00d365930524b719abd1a00592e0cc7",
        "version_major": 2,
        "version_minor": 0
       },
