restrict vocabulary, add origin of cached glove_vectors

--- a/input_viz_refactored.ipynb
+++ b/input_viz_refactored.ipynb
@@ -486,6 +486,7 @@
     "skel_df, appear_df, flow_df, objdf, objhand_post, anchored_frames, appear_df_post, flow_df_post, skel_df_post, gt_freqs, \\\n",
     "sem_readouts, inputdf, first_frame, offset, pca_input_df, pred_skel_df, skel_df_unscaled,categories, pred_objhand, word2vec, objhand_df = [None] * 21\n",
     "\n",
+    "# glove_vectors = gensim.downloader.load('glove-wiki-gigaword-50')\n",
     "glove_vectors = pkl.load(open('gen_sim_glove_50.pkl', 'rb'))"
    ]
   },
@@ -1102,7 +1103,7 @@
     "\n",
     "def get_nearest(emb_vector: np.ndarray, glove=False):\n",
     "    if glove:\n",
-    "        nearest_objects = glove_vectors.most_similar(emb_vector)\n",
+    "        nearest_objects = glove_vectors.most_similar(emb_vector, restrict_vocab=5000)\n",
     "        nearest_objects = [(nr[0], round(nr[1], 2)) for nr in nearest_objects]\n",
     "        return nearest_objects\n",
     "    \n",
