fix re-assigning argument in a function bug

--- a/input_viz_refactored.ipynb
+++ b/input_viz_refactored.ipynb
@@ -1121,18 +1121,18 @@
     "        ymax = ymin + (odf[i + '_h'] * s)\n",
     "        try:\n",
     "            conf_score = float(odf[i + '_confidence'])\n",
-    "            color = tuple(map(int, np.array(color) * conf_score))\n",
+    "            color_scaled = tuple(map(int, np.array(color) * conf_score))\n",
     "        except:\n",
-    "            color = (0, 0, 255)\n",
+    "            color_scaled = (0, 0, 255)\n",
     "        cv2.rectangle(frame, pt1=(int(xmin), int(ymin)),\n",
     "                      pt2=(int(xmax), int(ymax)),\n",
-    "                      color=color, thickness=thickness)\n",
+    "                      color=color_scaled, thickness=thickness)\n",
     "        if draw_name:\n",
     "            cv2.putText(frame, text=i,\n",
     "                        org=(int(xmin), int(ymax - 5)),\n",
     "                        fontFace=cv2.FONT_HERSHEY_SIMPLEX,\n",
     "                        fontScale=0.4,\n",
-    "                        color=color)\n",
+    "                        color=color_scaled)\n",
     "    # Code to also get nearest objects in Glove for input categories\n",
     "    # try:\n",
     "    #     sr = objdf.loc[frame_number].dropna().filter(regex='_dist$').rename(lambda x: remove_number(x).replace('_dist', ''))\n",
@@ -1176,14 +1176,14 @@
     "            for index, instance in enumerate(nearest_objects[:3]):\n",
     "                cv2.putText(outframe, text=str(instance), org=(outframe.shape[1] - 140, 20 + 20 * index),\n",
     "                            fontFace=cv2.FONT_HERSHEY_SIMPLEX, fontScale=0.4,\n",
-    "                            color=(0, 255, 0))\n",
+    "                            color=ColorBGR.green)\n",
     "            # Draw nearest objects (Glove corpus)\n",
     "            glove_nearest_objects = get_nearest([np.array(pred_objhand.loc[frame_slider, :].values, dtype=np.float32)],\n",
     "                                                glove=True)\n",
     "            for index, instance in enumerate(glove_nearest_objects[:3]):\n",
     "                cv2.putText(outframe, text=str(instance), org=(outframe.shape[1] - 280, 20 + 20 * index),\n",
     "                            fontFace=cv2.FONT_HERSHEY_SIMPLEX, fontScale=0.4,\n",
-    "                            color=(0, 255, 255))\n",
+    "                            color=ColorBGR.yellow)\n",
     "        except Exception as e:\n",
     "            print(traceback.format_exc())\n",
     "\n",
@@ -1565,11 +1565,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# objdf_z.loc[114, :].dropna(), inputdf.categories_z.loc[114, :].dropna()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# categories_z = inputdf.categories_z\n",
+    "# odf_z = objdf_z[objdf_z.index == 114]\n",
+    "# odf_z = odf_z[odf_z.columns[~odf_z.isna().any()].tolist()]\n",
+    "# odf_z\n",
+    "# cat_z = categories_z[categories_z.index == 114]\n",
+    "# cat_z = cat_z[cat_z.columns[~cat_z.isna().any()].tolist()]\n",
+    "# cat_z \n",
+    "# instances_z = set([x.split('_')[0] for x in odf_z.columns])\n",
+    "# instances_z"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# list(pd.Series(odf_z.filter(regex='dist_z$').iloc[0, :]).sort_values().index)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# objdf_z.loc[114, :].dropna(), inputdf.categories_z.loc[114, :].dropna()"
+    "# import matplotlib.pyplot as plt\n",
+    "# %matplotlib inline\n",
+    "# # Start with one\n",
+    "# fig = plt.figure()\n",
+    "# ax = fig.add_subplot(111)\n",
+    "# ax.plot([1,2,3])\n",
+    "\n",
+    "# # Now later you get a new subplot; change the geometry of the existing\n",
+    "# n = len(fig.axes)\n",
+    "# for i in range(n):\n",
+    "#     fig.axes[i].change_geometry(n+1, 1, i+1)\n",
+    "\n",
+    "# # Add the new\n",
+    "# ax = fig.add_subplot(n+1, 1, n+1)\n",
+    "# ax.plot([4,5,6])\n",
+    "\n",
+    "# plt.show() "
    ]
   },
   {
