add lowess and PE pane

--- a/matrix_viz.ipynb
+++ b/matrix_viz.ipynb
@@ -210,7 +210,7 @@
     "                select1 = f'{alfa}_{lmda}'\n",
     "                select2 = f'{config}'\n",
     "                select_tags.extend([t for t in available_tags if select1 in t and select2 in t])\n",
-    "    multi_tag_select.value = select_tags"
+    "    multi_tag_select.value = sorted(select_tags)"
    ]
   },
   {
@@ -253,31 +253,62 @@
     "\n",
     "    #     number = param.Number(default=0)\n",
     "\n",
-    "    action = param.Action(lambda x: x.param.trigger('action'), label='Update!')\n",
+    "    action = param.Action(lambda x: x.param.trigger('action'), label='Update Data!')\n",
     "\n",
     "    #     @param.depends('action')\n",
     "    #     def get_number(self):\n",
     "    #         return self.number\n",
-    "\n",
-    "    @param.depends('action')\n",
-    "    def matrix_visualize(self):\n",
-    "        print(f'Update pane: \\n'\n",
+    "    def get_df_select(self):\n",
+    "        print(f'Update data: \\n'\n",
     "              f'tags={multi_tag_select.value} \\n'\n",
     "              f'runs={multi_run_select.value}')\n",
     "        all_runs = multi_train_run_select.value + multi_valid_run_select.value\n",
     "        df_select = df[(df['tag'].isin(multi_tag_select.value)) & (df['run'].isin(all_runs))\n",
-    "                       # & (df['epoch'] < 45)\n",
+    "                       & ( df['epoch'] > 50)\n",
     "                       ]\n",
     "        if not (train_checkbox.value and valid_checkbox.value):\n",
     "            if train_checkbox.value:\n",
     "                df_select = df_select[(df_select['is_train'] == True)]\n",
     "            elif valid_checkbox.value:\n",
     "                df_select = df_select[(df_select['is_train'] == False)]\n",
+    "        return df_select\n",
     "\n",
+    "    action_matrix = param.Action(lambda x: x.param.trigger('action_matrix'), label='Update Matrix pane')\n",
+    "    @param.depends('action_matrix')\n",
+    "    def matrix_visualize(self):\n",
+    "        # print(f'Update data: \\n'\n",
+    "        #       f'tags={multi_tag_select.value} \\n'\n",
+    "        #       f'runs={multi_run_select.value}')\n",
+    "        # all_runs = multi_train_run_select.value + multi_valid_run_select.value\n",
+    "        # df_select = df[(df['tag'].isin(multi_tag_select.value)) & (df['run'].isin(all_runs))\n",
+    "        #                & ( df['epoch'] > 50)\n",
+    "        #                ]\n",
+    "        # if not (train_checkbox.value and valid_checkbox.value):\n",
+    "        #     if train_checkbox.value:\n",
+    "        #         df_select = df_select[(df_select['is_train'] == True)]\n",
+    "        #     elif valid_checkbox.value:\n",
+    "        #         df_select = df_select[(df_select['is_train'] == False)]\n",
+    "\n",
+    "        df_select = self.get_df_select()\n",
+    "\n",
+    "        tags = sorted(list(df_select['tag'].unique()))\n",
+    "        print(f'Tags for plotting Matrix: {tags}')\n",
+    "        if len(tags) == 0:\n",
+    "            return None\n",
+    "        if valid_checkbox.value:\n",
+    "            alpha = 0.05\n",
+    "        else:\n",
+    "            alpha = 0.2\n",
     "        hue = hue_select.value\n",
-    "        sns_plot = sns.pairplot(df_select[multi_metric_select.value + [f'{hue}']], hue=f'{hue}', palette='bright',\n",
+    "        hue_order = sorted(list(df_select[hue].unique()))\n",
+    "\n",
+    "        print('Plotting Matrix pane...')\n",
+    "        sns_plot = sns.pairplot(df_select[multi_metric_select.value + [f'{hue}']],\n",
+    "                                hue=f'{hue}', hue_order=hue_order, palette='bright',\n",
     "                                # kind='scatter', plot_kws={'alpha': 0.2, 's': 10},\n",
-    "                                kind='reg', plot_kws={'scatter_kws': {'alpha': 0.2, 's': 10}, 'ci': None},\n",
+    "                                kind='reg', plot_kws={'scatter_kws': {'alpha': alpha, 's': 10}, 'ci': None,\n",
+    "                                                      'lowess': True\n",
+    "                                                      },\n",
     "                                height=1.6)\n",
     "        for lh in sns_plot._legend.legendHandles:\n",
     "            lh._sizes = [100]\n",
@@ -285,7 +316,33 @@
     "        #     fig.set_size_inches(7,5)\n",
     "        fig.savefig('matrix.png')\n",
     "        plt.close()\n",
+    "        print('Done Matrix pane!')\n",
     "        return fig\n",
+    "    \n",
+    "    action_pe = param.Action(lambda x: x.param.trigger('action_pe'), label='Update PE pane')\n",
+    "    @param.depends('action_pe')\n",
+    "    def plot_pe(self):\n",
+    "        df_select = self.get_df_select()\n",
+    "        tags = sorted(list(df_select['tag'].unique()))\n",
+    "        if len(tags) == 0:\n",
+    "            return None\n",
+    "        if valid_checkbox.value:\n",
+    "            alpha = 0.05\n",
+    "        else:\n",
+    "            alpha = 0.2\n",
+    "\n",
+    "        fig, axes = plt.subplots(nrows=1, ncols=len(tags), figsize=(4*len(tags), 4), squeeze=False, sharex=True, sharey=True)\n",
+    "        fig.suptitle(f'PE across epochs for all Tags', fontsize=14)\n",
+    "        axes = axes.reshape((1, len(tags)))\n",
+    "        print('Plot PE pane...')\n",
+    "        for tag, ax in zip(tags, axes[0]):\n",
+    "            df_tag = df_select[df_select['tag'] == tag]\n",
+    "            sns.regplot(x=\"epoch\", y=\"mean_pe\", data=df_tag, ax=ax, lowess=True, scatter_kws={'alpha': alpha})\n",
+    "            ax.set_title(f'PE for {tag}')\n",
+    "        plt.close()\n",
+    "        print('Done PE pane!')\n",
+    "        return fig\n",
+    "\n",
     "\n",
     "\n",
     "action_matrix = ActionExample()"
@@ -338,11 +395,13 @@
     "    pn.Row('Compare Scatter Matrices Across Configurations'),\n",
     "    pn.Row(multi_alfa_select, multi_lmda_select, multi_config_select),\n",
     "    pn.Row(multi_metric_select, alfa_lmda_to_tag, multi_tag_select, multi_train_run_select, multi_valid_run_select),\n",
-    "    pn.Row(pn.panel(action_matrix.param, show_labels=True, show_name=False, margin=0),\n",
-    "           train_checkbox,\n",
-    "           valid_checkbox,\n",
-    "           hue_select),\n",
-    "    action_matrix.matrix_visualize\n",
+    "    pn.Row(\n",
+    "            # action_matrix.param.action,\n",
+    "            train_checkbox,\n",
+    "            valid_checkbox,\n",
+    "            hue_select),\n",
+    "    pn.Column(action_matrix.param.action_matrix, action_matrix.matrix_visualize),\n",
+    "    pn.Column(action_matrix.param.action_pe, action_matrix.plot_pe),\n",
     ")\n",
     "\n",
     "# Launch the dashboard\n",
