add annotations to active events, update environment_sem.yml

--- a/matrix_viz.ipynb
+++ b/matrix_viz.ipynb
@@ -115,7 +115,7 @@
     "# df['number_boundaries'] = df['number_boundaries'].clip(upper=150)\n",
     "\n",
     "available_tags = list(df['tag'].unique())\n",
-    "available_tags = sorted([x for x in available_tags if ('june' in x or 'july' in x)])\n",
+    "available_tags = sorted([x for x in available_tags if ('june' in x or 'july' in x or 'aug' in x)])\n",
     "default_tag = available_tags[0]\n",
     "available_metrics = sorted(list(df.columns))\n",
     "default_metric = ['mean_pe', 'percentile', 'pearson_r', 'number_boundaries', 'epoch', 'n_event_models', 'active_event_models',\n",
@@ -209,7 +209,8 @@
     "            for config in multi_config_select:\n",
     "                select1 = f'{alfa}_{lmda}'\n",
     "                select2 = f'{config}'\n",
-    "                select_tags.extend([t for t in available_tags if select1 in t and select2 in t])\n",
+    "                select3 = f'lr1E-03'\n",
+    "                select_tags.extend([t for t in available_tags if select1 in t and select2 in t and select3 in t])\n",
     "    multi_tag_select.value = sorted(select_tags)"
    ]
   },
@@ -264,7 +265,7 @@
     "              f'runs={multi_run_select.value}')\n",
     "        all_runs = multi_train_run_select.value + multi_valid_run_select.value\n",
     "        df_select = df[(df['tag'].isin(multi_tag_select.value)) & (df['run'].isin(all_runs))\n",
-    "                       & ( df['epoch'] > 50)\n",
+    "                       & ( df['epoch'] < 25)\n",
     "                       ]\n",
     "        if not (train_checkbox.value and valid_checkbox.value):\n",
     "            if train_checkbox.value:\n",
@@ -306,9 +307,7 @@
     "        sns_plot = sns.pairplot(df_select[multi_metric_select.value + [f'{hue}']],\n",
     "                                hue=f'{hue}', hue_order=hue_order, palette='bright',\n",
     "                                # kind='scatter', plot_kws={'alpha': 0.2, 's': 10},\n",
-    "                                kind='reg', plot_kws={'scatter_kws': {'alpha': alpha, 's': 10}, 'ci': None,\n",
-    "                                                      'lowess': True\n",
-    "                                                      },\n",
+    "                                kind='reg', plot_kws={'scatter_kws': {'alpha': alpha, 's': 10}, 'ci': None, 'lowess': True},\n",
     "                                height=1.6)\n",
     "        for lh in sns_plot._legend.legendHandles:\n",
     "            lh._sizes = [100]\n",
@@ -338,7 +337,7 @@
     "        for tag, ax in zip(tags, axes[0]):\n",
     "            df_tag = df_select[df_select['tag'] == tag]\n",
     "            sns.regplot(x=\"epoch\", y=\"mean_pe\", data=df_tag, ax=ax, lowess=True, scatter_kws={'alpha': alpha})\n",
-    "            ax.set_title(f'PE for {tag}')\n",
+    "            ax.set_title(f'{tag}')\n",
     "        plt.close()\n",
     "        print('Done PE pane!')\n",
     "        return fig\n",
