minor parameter changes, add comments

--- a/matrix_viz.ipynb
+++ b/matrix_viz.ipynb
@@ -106,7 +106,9 @@
    ],
    "source": [
     "\n",
-    "df = pd.read_csv('output/run_sem/results_corpus_entropy.csv')\n",
+    "# df = pd.read_csv('output/run_sem/results_corpus_entropy.csv')\n",
+    "# df = pd.read_csv('output/run_sem/results_purity_coverage.csv')\n",
+    "df = pd.read_csv('output/run_sem/results_purity_coverage.csv')\n",
     "df = df[~df['tag'].isna()]\n",
     "\n",
     "df['chapter'] = df['run'].apply(lambda x: int(x[2]))\n",
@@ -115,11 +117,11 @@
     "# df['number_boundaries'] = df['number_boundaries'].clip(upper=150)\n",
     "\n",
     "available_tags = list(df['tag'].unique())\n",
-    "available_tags = sorted([x for x in available_tags if ('june' in x or 'july' in x or 'aug' in x)])\n",
+    "available_tags = sorted([x for x in available_tags if ('aug' in x or 'sep' in x)])\n",
     "default_tag = available_tags[0]\n",
     "available_metrics = sorted(list(df.columns))\n",
-    "default_metric = ['mean_pe', 'percentile', 'pearson_r', 'number_boundaries', 'epoch', 'n_event_models', 'active_event_models',\n",
-    "                  'entropy']\n",
+    "default_metric = ['mean_pe', 'epoch', 'n_event_models', 'active_event_models', 'entropy', 'pearson_r',\n",
+    "                  'purity', 'coverage']\n",
     "available_runs = sorted(list(df['run'].unique()))\n",
     "default_run = available_runs\n",
     "available_train_runs = list(df[(df['is_train'] == True)]['run'].unique())\n",
@@ -145,7 +147,12 @@
     "compare_config = pn.widgets.Checkbox(name='Compare Configs?', value=False)\n",
     "\n",
     "hues = ['tag', 'chapter', 'run', 'config', 'is_train']\n",
-    "hue_select = pn.widgets.Select(name='Select Hue', options=hues, value='tag')\n"
+    "hue_select = pn.widgets.Select(name='Select Hue', options=hues, value='tag')\n",
+    "\n",
+    "min_epoch_slider = pn.widgets.DiscreteSlider(name='Select Min Epoch',\n",
+    "                                             options=list(range(df['epoch'].min(), df['epoch'].max()+1)), value=df['epoch'].min())\n",
+    "max_epoch_slider = pn.widgets.DiscreteSlider(name='Select Max Epoch',\n",
+    "                                             options=list(range(df['epoch'].min(), df['epoch'].max()+1)), value=df['epoch'].max())"
    ]
   },
   {
@@ -209,7 +216,8 @@
     "            for config in multi_config_select:\n",
     "                select1 = f'{alfa}_{lmda}'\n",
     "                select2 = f'{config}'\n",
-    "                select3 = f'lr1E-03'\n",
+    "                # select3 = f'lr1E-03'\n",
+    "                select3 = f'lr1E'\n",
     "                select_tags.extend([t for t in available_tags if select1 in t and select2 in t and select3 in t])\n",
     "    multi_tag_select.value = sorted(select_tags)"
    ]
@@ -265,7 +273,7 @@
     "              f'runs={multi_run_select.value}')\n",
     "        all_runs = multi_train_run_select.value + multi_valid_run_select.value\n",
     "        df_select = df[(df['tag'].isin(multi_tag_select.value)) & (df['run'].isin(all_runs))\n",
-    "                       & ( df['epoch'] < 25)\n",
+    "                       & (df['epoch'] <= max_epoch_slider.value) & (df['epoch'] >= min_epoch_slider.value)\n",
     "                       ]\n",
     "        if not (train_checkbox.value and valid_checkbox.value):\n",
     "            if train_checkbox.value:\n",
@@ -277,18 +285,6 @@
     "    action_matrix = param.Action(lambda x: x.param.trigger('action_matrix'), label='Update Matrix pane')\n",
     "    @param.depends('action_matrix')\n",
     "    def matrix_visualize(self):\n",
-    "        # print(f'Update data: \\n'\n",
-    "        #       f'tags={multi_tag_select.value} \\n'\n",
-    "        #       f'runs={multi_run_select.value}')\n",
-    "        # all_runs = multi_train_run_select.value + multi_valid_run_select.value\n",
-    "        # df_select = df[(df['tag'].isin(multi_tag_select.value)) & (df['run'].isin(all_runs))\n",
-    "        #                & ( df['epoch'] > 50)\n",
-    "        #                ]\n",
-    "        # if not (train_checkbox.value and valid_checkbox.value):\n",
-    "        #     if train_checkbox.value:\n",
-    "        #         df_select = df_select[(df_select['is_train'] == True)]\n",
-    "        #     elif valid_checkbox.value:\n",
-    "        #         df_select = df_select[(df_select['is_train'] == False)]\n",
     "\n",
     "        df_select = self.get_df_select()\n",
     "\n",
@@ -306,7 +302,7 @@
     "        print('Plotting Matrix pane...')\n",
     "        sns_plot = sns.pairplot(df_select[multi_metric_select.value + [f'{hue}']],\n",
     "                                hue=f'{hue}', hue_order=hue_order, palette='bright',\n",
-    "                                # kind='scatter', plot_kws={'alpha': 0.2, 's': 10},\n",
+    "                                # kind='scatter', plot_kws={'alpha': alpha, 's': 10},\n",
     "                                kind='reg', plot_kws={'scatter_kws': {'alpha': alpha, 's': 10}, 'ci': None, 'lowess': True},\n",
     "                                height=1.6)\n",
     "        for lh in sns_plot._legend.legendHandles:\n",
@@ -394,6 +390,7 @@
     "    pn.Row('Compare Scatter Matrices Across Configurations'),\n",
     "    pn.Row(multi_alfa_select, multi_lmda_select, multi_config_select),\n",
     "    pn.Row(multi_metric_select, alfa_lmda_to_tag, multi_tag_select, multi_train_run_select, multi_valid_run_select),\n",
+    "    pn.Row(min_epoch_slider, max_epoch_slider),\n",
     "    pn.Row(\n",
     "            # action_matrix.param.action,\n",
     "            train_checkbox,\n",
